<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d009d"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bck"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nivel_de_salida_de_potencia"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/w"
                android:inputType="numberDecimal"
                android:textColorHint="#414040" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/impedancia_de_carga"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinneramp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/background_light" />

            <TextView
                android:id="@+id/textView8"
                style="@style/AppTheme.BotonCalculadora.Azul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo2"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_de_altavoces"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/background_light" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potencia_programa"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/w"
                android:inputType="numberDecimal"
                android:textColorHint="#414040" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensibilidad"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/db_spl_1m_1w"
                android:inputType="numberDecimal"
                android:textColorHint="#414040"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/impedancia_nominal"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnimpedancespk"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/background_light" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distancia_a_la_cual_quiere_conocer_el_spl"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/m"
                android:inputType="numberDecimal"
                android:textColorHint="#414040"/>

            <Button
                android:id="@+id/calculate"
                style="@style/AppTheme.BotonCalculadora.Rojo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/botonmain" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/mylin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bck"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="794dp" />

        <TextView
            android:id="@+id/textView11"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spl_a_1_metro"
            android:textSize="18sp"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="676dp" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="720dp" />

        <TextView
            android:id="@+id/textView10"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spl_a_x_metros"
            android:textSize="18sp"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="750dp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="646dp" />

        <TextView
            android:id="@+id/textView9"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conexi_n_ideal"
            android:textSize="18sp"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="824dp" />

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/contentdescrip2"
            android:scaleType="fitCenter"
            android:visibility="invisible"
 />

        <Button
            android:id="@+id/calculate2"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="RECALCULAR"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentdescrip2"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="940dp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>